# dazi-android

./: .gitignore  PRD.md  README.md  build.gradle.kts  gradle.properties  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  交互设计文档.md  技术方案文档.md  最终交付清单.md  测试报告.md  测试用例.md  测试计划.md  用户故事.md  项目启动文档.md
.github/workflows/: android.yml  build-android.yml  build-release.yml
ShapeCodeMaster/: settings.gradle.kts
ShapeCodeMaster/app/: build.gradle.kts  proguard-rules.pro
docs/: kickoff.md
scripts/: gen-icon.mjs  restrict-abi.sh
src/: App.tsx  App.vue  index.css  router.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: achievements.rs  commands.rs  db.rs  lib.rs  main.rs  mastery.rs  models.rs  stats.rs
src/components/: AchievementBadge.vue  CharSetForm.vue  GameScreen.vue  HeatMap.tsx  LineChart.tsx  LineTyping.tsx  ModeCard.vue  ProgressRing.tsx  ResultModal.vue  StatCard.tsx  TabBar.tsx  TabBar.vue
src/composables/: useAudio.ts  useDb.ts  useGameEngine.ts  useHaptic.ts  useTheme.ts
src/data/: char-sets.json  top0-500.json  top1001-1500.json  top501-1000.json
src/lib/: charsets.ts  fallingEngine.test.ts  fallingEngine.ts  haptics.ts  ipc.ts  wpm.test.ts  wpm.ts
src/pages/: CharSets.tsx  CustomPractice.tsx  Game.tsx  Practice.tsx  Profile.tsx  Stats.tsx
src/services/: db.ts
src/store/: settings.ts
src/stores/: game.ts  settings.ts
src/utils/: achievements.ts  charSets.ts  (+1 more)
(+56 files in other folders)
