[package]
name = "typing-speed-android"
version = "1.0.0"
description = "打字提速 - 移动端中文打字速度练习工具"
authors = ["xqhjay"]
license = "MIT"
repository = "https://github.com/xqhjay/dazi-android"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
